--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -145,9 +145,7 @@
     />
   </head>
   <body>
-    <div class="hello">
-      <img class="hello__logo" src="../assets/img/logo.svg" alt="WTF " />
-      <span class="hello__circles"></span>
+      <img class="hello__logo" src="../assets/img/Vector.svg" alt="Glass icon" />
     </div>
   </body>
 </html>
