--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,6 +16,7 @@
       property="og:image"
       content="https://maciejkorsan.com/wtf-gulp-starter/assets/img/cover.png"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
     <!-- uncomment the line below to enable PWA  -->
     <link rel="manifest" href="manifest.json" />
@@ -141,11 +142,16 @@
     <link
       rel="apple-touch-startup-image"
       href="pwa/apple-splash-1136-640.png"
-      media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
+      media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" 
     />
   </head>
   <body>
+      <h1 class="header">HYDRAPP</h1>
       <img class="hello__logo" src="../assets/img/Vector.svg" alt="Glass icon" />
-    </div>
+      <h1 class="counter">0</h1>
+    <div class="buttons">
+    <button class="button_add">Dodaj szklankę</button>
+    <button class="button_delete">Usuń szklankę</button>
+  </div>
   </body>
 </html>
