Create counter, buttons and rebuild css and html

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -147,11 +147,15 @@
   </head>
   <body>
       <h1 class="header">HYDRAPP</h1>
+      <div class="glass">
+      <span class="glass__counter glass-counter--js">0<span>
+      </div>
       <img class="hello__logo" src="../assets/img/Vector.svg" alt="Glass icon" />
-      <h1 class="counter">0</h1>
-    <div class="buttons">
-    <button class="button_add">Dodaj szklankę</button>
-    <button class="button_delete">Usuń szklankę</button>
+      
+       
+      <div class="buttons">
+    <button class="button__add button-add--js">Dodaj szklankę</button>
+    <button class="button__remove button-remove--js">Usuń szklankę</button>
   </div>
   </body>
 </html>
