--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -146,12 +146,11 @@
     />
   </head>
   <body>
+      <button class="darkMode">DARK MODE</button>
       <h1 class="header">HYDRAPP</h1>
       <div class="glass">
       <span class="glass__counter glass-counter--js">0<span>
       </div>
-      <img class="hello__logo" src="../assets/img/Vector.svg" alt="Glass icon" />
-      
        
       <div class="buttons">
     <button class="button__add button-add--js">Dodaj szklankę</button>
