--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -146,6 +146,16 @@
     />
   </head>
   <body>
+      <div class="description">
+        <article class="description__article">
+          <p class="description__article--p">
+            - The average adult male is about 60% water. The average adult woman is about 55% water
+          </p>
+          <p class="description__article--p">
+            - Every day you shold drink about 2 liters water
+          </p>
+        </article>
+      </div>
       <button class="darkMode">DARK MODE</button>
       <h1 class="header">HYDRAPP</h1>
       <div class="glass">
